--- a/introduction_to_python.ipynb
+++ b/introduction_to_python.ipynb
@@ -22,13 +22,17 @@
     "- Esc, b : add a cell below\n",
     "- Esc, a : add a cell above\n",
     "- Esc, m : transform cell to `markdown`\n",
-    "- Esc, d : delete cell\n",
-    "\n",
-    "## Copying this tutorial:\n",
-    "Before starting, run this command from your home to copy the material:\n",
-    "```bash\n",
-    "cp -r /nfs/nas22/fs2202/biol_micro_teaching/551-1119-00L-2024/s0506_python .\n",
-    "```\n"
+    "- Esc, d : delete cell\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get access to data\n",
+    "!git clone https://github.com/samuelmiver/genome_mining.git"
    ]
   },
   {
