--- a/introduction_to_python.ipynb
+++ b/introduction_to_python.ipynb
@@ -32,7 +32,10 @@
    "outputs": [],
    "source": [
     "# Get access to data\n",
-    "!git clone https://github.com/samuelmiver/genome_mining.git"
+    "!git clone https://github.com/samuelmiver/genome_mining.git\n",
+    "\n",
+    "# Set data path\n",
+    "DATA = '/content/genome_mining/data' # From now on you can access data folder from the DATA variable"
    ]
   },
   {
@@ -106,20 +109,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
@@ -132,14 +121,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "1\n",
     "2"
@@ -186,21 +186,7 @@
    },
    "outputs": [],
    "source": [
-    "'ap\"ple'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\"apple\""
+    "\"apple\", 'apple'"
    ]
   },
   {
@@ -212,30 +198,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": [
-    "True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, False)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "False"
+    "True, False"
    ]
   },
   {
@@ -353,7 +336,7 @@
    },
    "outputs": [],
    "source": [
-    "capitals = {'France': 'Paris', 'England': 'London', 'Canada': 'Toronto'}\n"
+    "capitals = {'France': 'Paris', 'England': 'London', 'Canada': 'Toronto'}"
    ]
   },
   {
@@ -458,16 +441,6 @@
     "print(1)\n",
     "print(2)\n",
     "print(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1\n",
-    "2"
    ]
   },
   {
@@ -1257,20 +1230,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def gc1(seq):\n",
     "    c = 0\n",
@@ -1306,8 +1265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Introduction to data analysis with pandas\n",
-    "Thanks Anna Sintsova for the example analysis used as reference in this section! "
+    "# 2. Introduction to data analysis with pandas"
    ]
   },
   {
@@ -1344,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1494,7 +1452,7 @@
    "outputs": [],
    "source": [
     "# Read in a csv file\n",
-    "data = pd.read_csv('data/2022-04-13.LeeKA_2022.colData.csv', index_col=0)"
+    "data = pd.read_csv(f'{DATA}/2022-04-13.LeeKA_2022.colData.csv', index_col=0)"
    ]
   },
   {
@@ -1936,7 +1894,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rel_abundance = pd.read_csv(\"data/2022-04-13.LeeKA_2022.relative_abundance.SAMPLE.csv\", index_col=0)\n",
+    "rel_abundance = pd.read_csv(f\"{DATA}/2022-04-13.LeeKA_2022.relative_abundance.SAMPLE.csv\", index_col=0)\n",
     "\n"
    ]
   },
@@ -1982,7 +1940,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"data/ploting_ws.csv\")"
+    "df.to_csv(f\"{DATA}/ploting_ws.csv\")"
    ]
   },
   {
@@ -2036,7 +1994,7 @@
    "source": [
     "plt.boxplot([[1,2,3], [3,4,5]])\n",
     "# plt.show()    # To show the plot, not required in notebooks\n",
-    "plt.savefig('./data/boxplot.svg')    # You can save in png, svg, pdf, etc"
+    "# plt.savefig('./data/boxplot.svg')    # You can save in png, svg, pdf, etc"
    ]
   },
   {
@@ -2090,7 +2048,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/ploting_ws.csv\", index_col=0)"
+    "df = pd.read_csv(f\"{DATA}/ploting_ws.csv\", index_col=0)"
    ]
   },
   {
@@ -2267,8 +2225,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('./data/genome_summary.csv.gz', compression='gzip', index_col=0)\n",
-    "md = pd.read_csv('./data/metadata.tsv', sep='\\t', index_col=0)"
+    "df = pd.read_csv(f'{DATA}/genome_summary.csv.gz', compression='gzip', index_col=0)\n",
+    "md = pd.read_csv(f'{DATA}/metadata.tsv', sep='\\t', index_col=0)"
    ]
   },
   {
