--- a/hands_on_genome_mining.ipynb
+++ b/hands_on_genome_mining.ipynb
@@ -1244,7 +1244,7 @@
    "outputs": [],
    "source": [
     "omd_amps = pd.read_csv(f'{DATA}/amps/smorfs_summary.tsv.gz', compression='gzip', sep='\\t', index_col=0)\n",
-    "omd_bgcs = pd.read_csv(f'{DATA}/amps/morfs_bgcs_amps.tsv.gz', compression='gzip', sep='\\t', index_col=0)\n",
+    "omd_bgcs = pd.read_csv(f'{DATA}/amps/smorfs_bgcs_amps.tsv.gz', compression='gzip', sep='\\t', index_col=0)\n",
     "md = pd.read_csv(f'{DATA}/data/metadata.tsv', sep='\\t', index_col=0)"
    ]
   },
