--- a/hands_on_genome_mining.ipynb
+++ b/hands_on_genome_mining.ipynb
@@ -57,7 +57,7 @@
     "!git clone https://github.com/samuelmiver/genome_mining.git\n",
     "\n",
     "# Install some libraries in our colab folder (important libraries such as numpy, pandas, etc. are already installed!)\n",
-    "!pip install Bio pyhmmer==0.10.11 peptides==0.3.4 cobra.io escher networkx\n",
+    "!pip install Bio pyhmmer==0.10.11 peptides==0.3.4 cobra==0.27 networkx\n",
     "\n",
     "# Set data path\n",
     "DATA = '/content/genome_mining/data' # From now on you can access data folder from the DATA variable"
@@ -546,15 +546,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "blast_results"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -590,8 +581,7 @@
     "1. Subset the previous results to get only results with an e-value <0.0000001.\n",
     "2. Further filter cases with pident >=50 and length >150.\n",
     "3. How many genes satisfy the condition 1 and 2? \n",
-    "4. What are the different degrading enzymes identified? \n",
-    "5. Can you do a plot showing something interesting about the different biodegradation categories? "
+    "4. What are the different degrading enzymes identified? "
    ]
   },
   {
@@ -663,9 +653,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cobra'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# The start of everything is reading the model with built-in function:\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcobra\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m read_sbml_model \n\u001b[1;32m      3\u001b[0m btheta \u001b[38;5;241m=\u001b[39m read_sbml_model(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mDATA\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/gem_files/btheta.fa.xml\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m btheta\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cobra'"
+     ]
+    }
+   ],
    "source": [
     "# The start of everything is reading the model with built-in function:\n",
     "from cobra.io import read_sbml_model \n",
@@ -820,32 +822,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also ensure the reaction is mass balanced. This function will return elements which violate mass balance. If it comes back empty, then the reaction is mass balanced."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'charge': -2.0}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "acp.check_mass_balance()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "We can list all the reactions names in a model using comprehension lists:"
    ]
   },
@@ -876,30 +852,6 @@
    "source": [
     "reactions = [i.id for i in btheta.reactions]\n",
     "reactions[:10]   # Show the 10 first reactions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There is other information in the the reactions objects, to check the different methods we can apply to an object in python we can use the method `dir()`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['__add__', '__class__', '__copy__', '__deepcopy__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getstate__', '__gt__', '__hash__', '__iadd__', '__imul__', '__init__', '__init_subclass__', '__isub__', '__le__', '__lt__', '__module__', '__mul__', '__ne__', '__new__', '__radd__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__setstate__', '__sizeof__', '__str__', '__sub__', '__subclasshook__', '__weakref__', '_annotation', '_associate_gene', '_check_bounds', '_dissociate_gene', '_genes', '_gpr', '_id', '_lower_bound', '_metabolites', '_model', '_repr_html_', '_set_id_with_model', '_update_awareness', '_upper_bound', 'add_metabolites', 'annotation', 'boundary', 'bounds', 'build_reaction_from_string', 'build_reaction_string', 'check_mass_balance', 'compartments', 'copy', 'delete', 'flux', 'flux_expression', 'forward_variable', 'functional', 'gene_name_reaction_rule', 'gene_reaction_rule', 'genes', 'get_coefficient', 'get_coefficients', 'get_compartments', 'gpr', 'id', 'knock_out', 'lower_bound', 'metabolites', 'model', 'name', 'notes', 'objective_coefficient', 'products', 'reactants', 'reaction', 'reduced_cost', 'remove_from_model', 'reverse_id', 'reverse_variable', 'reversibility', 'subsystem', 'subtract_metabolites', 'summary', 'update_genes_from_gpr', 'update_variable_bounds', 'upper_bound', 'x', 'y']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dir(btheta.reactions[0]))"
    ]
   },
   {
@@ -1081,16 +1033,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 0, 1]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'btheta' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m no2 \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m [\u001b[43mbtheta\u001b[49m, ecole, arect]:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m m\u001b[38;5;241m.\u001b[39mmetabolites\u001b[38;5;241m.\u001b[39mget_by_id(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mno2_c\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'btheta' is not defined"
+     ]
     }
    ],
    "source": [
+    "models = [btheta, ecoli, arect]\n",
+    "\n",
     "no2 = []\n",
     "for m in models:\n",
     "    try:\n",
@@ -1099,93 +1055,6 @@
     "    except:\n",
     "        no2.append(0)\n",
     "no2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Reaction identifier</strong></td><td>NARK</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>Nitrite transport, extracellular</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x7f5e98354080</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Stoichiometry</strong></td>\n",
-       "                <td>\n",
-       "                    <p style='text-align:right'>no2_c <=> no2_e</p>\n",
-       "                    <p style='text-align:right'>Nitrite <=> Nitrite</p>\n",
-       "                </td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>GPR</strong></td><td></td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Lower bound</strong></td><td>-1000.0</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Upper bound</strong></td><td>1000.0</td>\n",
-       "            </tr>\n",
-       "        </table>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<Reaction NARK at 0x7f5e98354080>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "btheta.reactions.get_by_id('NARK')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'no2_c'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)\n",
-      "\n",
-      "\u001b[0;32m<ipython-input-21-85e9093a6abb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\n",
-      "\u001b[0;32m----> 1\u001b[0;31m \u001b[0marect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetabolites\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_by_id\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'no2_c'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\n",
-      "\u001b[0m\n",
-      "\n",
-      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/cobra/core/dictlist.py\u001b[0m in \u001b[0;36mget_by_id\u001b[0;34m(self, id)\u001b[0m\n",
-      "\n",
-      "\u001b[1;32m     73\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_by_id\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mid\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mObject\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mObject\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\n",
-      "\u001b[1;32m     74\u001b[0m         \u001b[0;34m\"\"\"Return the element with a matching id.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\n",
-      "\u001b[0;32m---> 75\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\n",
-      "\u001b[0m\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\n",
-      "\u001b[1;32m     77\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mlist_attr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattribute\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\n",
-      "\n",
-      "\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'no2_c'"
-     ]
-    }
-   ],
-   "source": [
-    "arect.metabolites.get_by_id('no2_c')"
    ]
   },
   {
@@ -1243,44 +1112,6 @@
    "source": [
     "pgi = btheta.reactions.get_by_id(\"PGI\")\n",
     "pgi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "pgi.check_mass_balance()   # This reaction is mass balanced"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "frozenset({<Gene lcl_CP092641_1_prot_UML61488_1_4728 at 0x7f77d3b1e430>})"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "pgi.genes"
    ]
   },
   {
@@ -1349,42 +1180,6 @@
    ],
    "source": [
     "pgi_gene.reactions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can list all the genes in a model using comprehension lists:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['lcl_CP092641_1_prot_UML59985_1_3140',\n",
-       " 'lcl_CP092641_1_prot_UML61431_1_4671',\n",
-       " 'lcl_CP092641_1_prot_UML60641_1_3835',\n",
-       " 'lcl_CP092641_1_prot_UML62131_1_659',\n",
-       " 'lcl_CP092641_1_prot_UML60141_1_3306',\n",
-       " 'lcl_CP092641_1_prot_UML59397_1_2519',\n",
-       " 'lcl_CP092641_1_prot_UML60650_1_3844',\n",
-       " 'lcl_CP092641_1_prot_UML62416_1_957',\n",
-       " 'lcl_CP092641_1_prot_UML61752_1_257',\n",
-       " 'lcl_CP092641_1_prot_UML61881_1_400']"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "genes = [i.id for i in btheta.genes]\n",
-    "genes[:10]   # Show the 10 first reactions"
    ]
   },
   {
@@ -2584,6 +2379,7 @@
    ],
    "source": [
     "# We can cross link lists using zip()\n",
+    "import glob\n",
     "for original_model, gapfill_model in zip(glob.glob(f'{DATA}/gem_files/*.xml'), \n",
     "                                         glob.glob(f'{DATA}/gem_media_files/*.xml')):\n",
     "    print(original_model, gapfill_model)"
@@ -2602,7 +2398,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import glob\n",
     "for original_model, gapfill_model in zip(glob.glob(f'{DATA}/gem_files/*.xml'), \n",
     "                                         glob.glob(f'{DATA}/gem_media_files/*.xml')):\n",
     "    organism = original_model.split('/')[-1].split('.')[0]\n",
@@ -3860,7 +3655,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('./hands_on_files/community_examples/example_detailed.tsv', sep='\\t')\n",
+    "df = pd.read_csv(f'{DATA}/community_examples/example_detailed.tsv', sep='\\t')\n",
     "df"
    ]
   },
@@ -3885,8 +3680,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the model \n",
-    "# df = pd.read_csv('./hands_on_files/community/community_detailed.tsv', sep='\\t')\n",
-    "df = pd.read_csv('./hands_on_files/community_examples/example_detailed.tsv', sep='\\t')\n",
+    "df = pd.read_csv(f'{DATA}/community_examples/example_detailed.tsv', sep='\\t')\n",
     "\n",
     "# Create an empty graph\n",
     "G = nx.Graph()\n",
@@ -4035,7 +3829,7 @@
     "    smetana = row['smetana']*10\n",
     "    compound = row['compound']\n",
     "    \n",
-    "    if donor=='ecoli.fa':\n",
+    "    if donor=='ecoli_k12':\n",
     "        G.add_node(compound)\n",
     "        G.add_node(donor)\n",
     "        G.add_edge(compound, donor, weight=smetana)\n",
@@ -4168,6 +3962,8 @@
     }
    ],
    "source": [
+    "# Pivot the DataFrame to count the number of compounds shared between donors and receivers\n",
+    "heatmap_data = df.pivot_table(index='donor', columns='receiver', values='compound', aggfunc='count', fill_value=0)\n",
     "heatmap_data"
    ]
   },
@@ -4189,8 +3985,6 @@
    ],
    "source": [
     "import seaborn as sns\n",
-    "# Pivot the DataFrame to count the number of compounds shared between donors and receivers\n",
-    "heatmap_data = df.pivot_table(index='donor', columns='receiver', values='compound', aggfunc='count', fill_value=0)\n",
     "\n",
     "# Create the heatmap\n",
     "plt.figure(figsize=(10, 8))\n",
@@ -4378,7 +4172,11 @@
     "- What would be your interpretation from the raw predictions? \n",
     "- What do you think has happened here evolutionary speaking? \n",
     "- What would be your interpretation from the predictions with evalue<5e-10? \n",
-    "- What else you could try to validate your hypothesis?"
+    "- What else you could try to validate your hypothesis?\n",
+    "\n",
+    "Additional:\n",
+    "- The E-value is the number of expected hits of similar quality (score) that could be found just by chance.\n",
+    "- The bit-score is the required size of a sequence database in which the current match could be found just by chance."
    ]
   },
   {
@@ -4486,7 +4284,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Define function to check if a gene is an Eukaryotic-like protein (ELP)\n",
+    "def is_elp(pfam_string):\n",
+    "    elp_keywords = [\n",
+    "        \"ankyrin repeat\", \n",
+    "        \"tetratrico peptide repeat\", \n",
+    "        \"tetratricopeptide repeat\", \n",
+    "        \"wd40 region\", \n",
+    "        \"wd40-like\", \n",
+    "        \"leucine-rich repeat\"\n",
+    "    ]\n",
+    "    \n",
+    "    # Ensure case insensitivity\n",
+    "    pfam_string = pfam_string.lower() if isinstance(pfam_string, str) else \"\"\n",
+    "\n",
+    "    # Check if any of the keywords are in the PFAM column\n",
+    "    return any(keyword in pfam_string for keyword in elp_keywords)\n",
+    "\n",
+    "# Sample DataFrame (replace with actual data)\n",
+    "data = {\n",
+    "    \"Gene\": [\"Gene1\", \"Gene2\", \"Gene3\", \"Gene4\"],\n",
+    "    \"PFAM\": [\"Ankyrin Repeat\", \"WD40 Region\", \"Some Other Domain\", \"Leucine-rich Repeat\"]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Add a column indicating whether the gene is an ELP\n",
+    "df[\"Is_ELP\"] = df[\"PFAM\"].apply(is_elp)\n",
+    "\n",
+    "# Compute the percentage of ELPs\n",
+    "total_genes = len(df)\n",
+    "elp_count = df[\"Is_ELP\"].sum()\n",
+    "elp_percentage = (elp_count / total_genes) * 100\n",
+    "\n",
+    "# Print the results\n",
+    "print(f\"Total genes: {total_genes}\")\n",
+    "print(f\"Eukaryotic-like proteins (ELPs): {elp_count}\")\n",
+    "print(f\"Percentage of ELPs: {elp_percentage:.2f}%\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4819,7 +4657,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subdf = top_features_data[['label', top_feature_names[0]]]\n",
+    "subdf = top_features_data[['label']+top_feature_names]\n",
     "subdf"
    ]
   },
@@ -4831,8 +4669,9 @@
    "source": [
     "from scipy.stats import mannwhitneyu\n",
     "\n",
-    "U1, p = mannwhitneyu(subdf[subdf['label']==1][top_feature_names[0]], subdf[subdf['label']==0][top_feature_names[0]], method=\"exact\")\n",
-    "p"
+    "for i in top_feature_names:\n",
+    "  U1, p = mannwhitneyu(subdf[subdf['label']==1][i], subdf[subdf['label']==0][i], method=\"exact\")\n",
+    "  print(i, p)"
    ]
   }
  ],
