--- a/hands_on_genome_mining.ipynb
+++ b/hands_on_genome_mining.ipynb
@@ -39,7 +39,7 @@
     "Material:\n",
     "\n",
     "- This material is complementary to theoretical content included in [this presentation](https://docs.google.com/presentation/d/1iad5MKHSTRdqDJgdIiTemxh5WUb9z7kTxrSJEfBV_tU/edit?usp=sharing).\n",
-    "- This notebook is part of [this repository](https://github.com/samuelmiver/genome_mining).\n",
+    "- This notebook is part of [this repository](https://github.com/franciscozorrilla/microbial_community_genomics.git).\n",
     "\n",
     "**Latest update**: 2025/03/11\n",
     "\n",
@@ -53,13 +53,13 @@
    "outputs": [],
    "source": [
     "# Get access to data\n",
-    "!git clone https://github.com/samuelmiver/genome_mining.git\n",
+    "!git clone https://github.com/franciscozorrilla/microbial_community_genomics.git\n",
     "\n",
     "# Install some libraries in our colab folder (important libraries such as numpy, pandas, etc. are already installed!)\n",
     "!pip install Bio pyhmmer==0.10.11 peptides==0.3.4 cobra==0.27 networkx\n",
     "\n",
     "# Set data path\n",
-    "DATA = '/content/genome_mining/data' # From now on you can access data folder from the DATA variable"
+    "DATA = '/content/microbial_community_genomics/data' # From now on you can access data folder from the DATA variable"
    ]
   },
   {
